@@ -1,12 +1,9 @@
 package com.example.admin_service.service;
 
-import com.example.admin_service.dto.request.AdminLoginDTO;
-import com.example.admin_service.dto.request.SubAdminDetailsDTO;
-import com.example.admin_service.dto.request.SubAdminRequest;
-import com.example.admin_service.dto.response.AdminLoginRequest;
-import com.example.admin_service.dto.response.CourseResponseDTO;
-import com.example.admin_service.dto.response.TrainerResponseDTO;
+import com.example.admin_service.dto.request.*;
+import com.example.admin_service.dto.response.*;
 import com.example.admin_service.enums.AdminRole;
+import com.example.admin_service.enums.Role;
 import com.example.admin_service.exceptions.AdminNotFoundException;
 import com.example.admin_service.exceptions.InvalidCredentialsException;
 import com.example.admin_service.feign.AuthClient;
@@ -17,10 +14,9 @@ import com.example.admin_service.repository.AdminRepository;
 import com.example.admin_service.util.JwtUtil;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.*;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
-import java.util.Date;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -28,232 +24,252 @@ import static org.mockito.Mockito.*;
 
 class AdminServiceTest {
 
-    @Mock
+    private AdminService adminService;
     private UserClient userClient;
-
-    @Mock
     private AuthClient authClient;
-
-    @Mock
     private CourseClient courseClient;
-
-    @Mock
     private AdminRepository adminRepository;
-
-    @Mock
     private JwtUtil jwtUtil;
-
-    @Mock
     private PasswordEncoder passwordEncoder;
 
-    @InjectMocks
-    private AdminService adminService;
-
-    private final String TOKEN = "Bearer token";
+    private static final String TOKEN = "Bearer token";
 
     @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
+    void setup() {
+        userClient = mock(UserClient.class);
+        authClient = mock(AuthClient.class);
+        courseClient = mock(CourseClient.class);
+        adminRepository = mock(AdminRepository.class);
+        jwtUtil = mock(JwtUtil.class);
+        passwordEncoder = mock(PasswordEncoder.class);
+
+        adminService = new AdminService(
+                userClient, authClient, courseClient,
+                adminRepository, jwtUtil, passwordEncoder
+        );
     }
 
-    // ===== getUser =====
-    @Test
-    void getUser_trainer() {
-        com.example.admin_service.dto.request.UserDTO userDTO = new com.example.admin_service.dto.request.UserDTO();
-        userDTO.setRole(com.example.admin_service.enums.Role.TRAINER);
-
-        com.example.admin_service.dto.response.TrainerResponseDTO trainerDTO = new com.example.admin_service.dto.response.TrainerResponseDTO();
-        when(authClient.geUserById(TOKEN, "t1")).thenReturn(userDTO);
-        when(userClient.getTrainerById(TOKEN, "t1")).thenReturn(trainerDTO);
-
-        Object result = adminService.getUser(TOKEN, "t1");
-        assertEquals(trainerDTO, result);
-    }
+    // ================= getUser =================
 
     @Test
-    void getUser_admin() {
-        com.example.admin_service.dto.request.UserDTO userDTO = new com.example.admin_service.dto.request.UserDTO();
-        // In the service, the check is for exactly "ADMIN". But the Role enum only has SUPER_ADMIN etc.
-        // So passing SUPER_ADMIN will fall back to getLearner
-        userDTO.setRole(com.example.admin_service.enums.Role.SUPER_ADMIN);
+    void getUser_trainerRole() {
+        UserDTO dto = mock(UserDTO.class);
+        when(dto.getRole()).thenReturn(Role.TRAINER);
 
-        com.example.admin_service.dto.response.LearnerResponseDTO learnerFallbackDTO = new com.example.admin_service.dto.response.LearnerResponseDTO();
-        when(authClient.geUserById(TOKEN, "a1")).thenReturn(userDTO);
-        when(userClient.getLearner(TOKEN, "a1")).thenReturn(learnerFallbackDTO);
+        TrainerResponseDTO response = new TrainerResponseDTO();
 
-        Object result = adminService.getUser(TOKEN, "a1");
-        assertEquals(learnerFallbackDTO, result);
+        when(authClient.geUserById(TOKEN, "1")).thenReturn(dto);
+        when(userClient.getTrainerById(TOKEN, "1")).thenReturn(response);
+
+        assertSame(response, adminService.getUser(TOKEN, "1"));
     }
 
     @Test
-    void getUser_learner() {
-        com.example.admin_service.dto.request.UserDTO userDTO = new com.example.admin_service.dto.request.UserDTO();
-        userDTO.setRole(com.example.admin_service.enums.Role.LEARNER);
+    void getUser_superAdminRole() {
+        UserDTO dto = mock(UserDTO.class);
+        when(dto.getRole()).thenReturn(Role.SUPER_ADMIN);
 
-        com.example.admin_service.dto.response.LearnerResponseDTO learnerDTO = new com.example.admin_service.dto.response.LearnerResponseDTO();
-        when(authClient.geUserById(TOKEN, "u1")).thenReturn(userDTO);
-        when(userClient.getLearner(TOKEN, "u1")).thenReturn(learnerDTO);
+        AdminResponseDTO response = new AdminResponseDTO();
 
-        Object result = adminService.getUser(TOKEN, "u1");
-        assertEquals(learnerDTO, result);
-    }
+        when(authClient.geUserById(TOKEN, "1")).thenReturn(dto);
+        when(userClient.getAdmin("1")).thenReturn(response);
 
-    // ===== trainerApprove / rejectApprove =====
-    @Test
-    void trainerApprove_success() {
-        org.springframework.http.ResponseEntity<Object> responseEntity = org.springframework.http.ResponseEntity.ok("approved");
-        when(authClient.activateTrainer(TOKEN, "t1")).thenReturn(responseEntity);
-        assertEquals(responseEntity, adminService.trainerApprove(TOKEN, "t1"));
+        assertSame(response, adminService.getUser(TOKEN, "1"));
     }
 
     @Test
-    void rejectApprove_success() {
-        org.springframework.http.ResponseEntity<Object> responseEntity = org.springframework.http.ResponseEntity.ok("rejected");
-        when(authClient.rejectTrainer(TOKEN, "t1")).thenReturn(responseEntity);
-        assertEquals(responseEntity, adminService.rejectApprove(TOKEN, "t1"));
+    void getUser_learnerRole() {
+        UserDTO dto = mock(UserDTO.class);
+        when(dto.getRole()).thenReturn(Role.LEARNER);
+
+        LearnerResponseDTO response = new LearnerResponseDTO();
+
+        when(authClient.geUserById(TOKEN, "1")).thenReturn(dto);
+        when(userClient.getLearner(TOKEN, "1")).thenReturn(response);
+
+        assertSame(response, adminService.getUser(TOKEN, "1"));
     }
 
-    // ===== getAllTrainer / getAllUnVerified / getPendingTrainers =====
+    // ================= Trainer Actions =================
+
     @Test
-    void getAllTrainer_success() {
-        List<TrainerResponseDTO> list = List.of(new TrainerResponseDTO());
+    void trainerApprove() {
+        adminService.trainerApprove(TOKEN, "t1");
+        verify(authClient).activateTrainer(TOKEN, "t1");
+    }
+
+    @Test
+    void rejectApprove() {
+        adminService.rejectApprove(TOKEN, "t1");
+        verify(authClient).rejectTrainer(TOKEN, "t1");
+    }
+
+    // ================= Course =================
+
+    @Test
+    void verifyCourse() {
+        adminService.verifyCourse(TOKEN, "c1");
+        verify(courseClient).verifyCourse(TOKEN, "c1");
+    }
+
+    @Test
+    void rejectCourse() {
+        adminService.rejectCourse(TOKEN, "c1");
+        verify(courseClient).rejectCourse(TOKEN, "c1");
+    }
+
+    @Test
+    void getAllUnVerified() {
+        List<CourseResponseDTO> list = Collections.emptyList();
+        when(courseClient.getAllUnVerifiedCourses(TOKEN)).thenReturn(list);
+
+        assertEquals(list, adminService.getAllUnVerified(TOKEN));
+    }
+
+    // ================= Trainer Fetch =================
+
+    @Test
+    void getAllTrainer() {
+        List<TrainerResponseDTO> list = Collections.emptyList();
         when(userClient.getAllTrainers(TOKEN)).thenReturn(list);
 
         assertEquals(list, adminService.getAllTrainer(TOKEN));
     }
 
     @Test
-    void getAllUnVerified_success() {
-        List<CourseResponseDTO> list = List.of(CourseResponseDTO.builder()
-                .courseId("c1")
-                .courseCode("CODE1")
-                .slug("slug1")
-                .version(1)
-                .createdAt(new Date())
-                .updatedAt(new Date())
-                .createdBy("admin")
-                .build());
-        when(courseClient.getAllUnVerifiedCourses(TOKEN)).thenReturn(list);
-
-        assertEquals(list, adminService.getAllUnVerified(TOKEN));
-    }
-
-    @Test
-    void getPendingTrainers_success() {
-        List<TrainerResponseDTO> list = List.of(new TrainerResponseDTO());
+    void getPendingTrainers() {
+        List<TrainerResponseDTO> list = Collections.emptyList();
         when(userClient.getAllPendingTrainers(TOKEN)).thenReturn(list);
 
         assertEquals(list, adminService.getPendingTrainers(TOKEN));
     }
 
-    // ===== login =====
-    @Test
-    void login_success_pending() {
-        AdminLoginDTO dto = new AdminLoginDTO();
-        dto.setAdminId("admin1");
-        dto.setPassword("correct");
-        Admin admin = new Admin();
-        admin.setPassword("hashed");
-        admin.setPending(true);
-        admin.setEmail("a@a.com");
-        admin.setAdminRole(AdminRole.SUPER_ADMIN);
-        admin.setUsername("user1");
-        admin.setUserId("u1");
-
-        org.springframework.http.ResponseEntity<Object> responseEntity = org.springframework.http.ResponseEntity.ok("object");
-        when(adminRepository.findById("admin1")).thenReturn(admin);
-        when(passwordEncoder.matches(anyString(), anyString())).thenReturn(true);
-        when(authClient.adminLogin(any(AdminLoginRequest.class))).thenReturn(responseEntity);
-
-        Object result = adminService.login(dto);
-        assertTrue(result instanceof com.example.admin_service.dto.response.Response);
-    }
+    // ================= login =================
 
     @Test
-    void login_success_notPending() {
+    void login_success() {
         AdminLoginDTO dto = new AdminLoginDTO();
-        dto.setAdminId("admin1");
-        dto.setPassword("correct");
+        dto.setAdminId("a1");
+        dto.setPassword("pass");
+
         Admin admin = new Admin();
         admin.setPassword("hashed");
         admin.setPending(false);
-        admin.setEmail("a@a.com");
-        admin.setAdminRole(AdminRole.SUPER_ADMIN);
-        admin.setUsername("user1");
-        admin.setUserId("u1");
 
-        org.springframework.http.ResponseEntity<Object> responseEntity = org.springframework.http.ResponseEntity.ok("object");
-        when(adminRepository.findById("admin1")).thenReturn(admin);
-        when(passwordEncoder.matches(anyString(), anyString())).thenReturn(true);
-        when(authClient.adminLogin(any(AdminLoginRequest.class))).thenReturn(responseEntity);
+        when(adminRepository.findById("a1")).thenReturn(admin);
+        when(passwordEncoder.matches("pass", "hashed")).thenReturn(true);
+        when(authClient.adminLogin(any())).thenReturn("TOKEN");
 
-        Object result = adminService.login(dto);
-        assertEquals(responseEntity, result);
+        assertEquals("TOKEN", adminService.login(dto));
     }
 
     @Test
-    void login_adminNotFound() {
+    void login_pendingAdmin() {
         AdminLoginDTO dto = new AdminLoginDTO();
-        dto.setAdminId("admin1");
-        when(adminRepository.findById("admin1")).thenReturn(null);
+        dto.setAdminId("a1");
+        dto.setPassword("pass");
 
-        assertThrows(AdminNotFoundException.class, () -> adminService.login(dto));
+        Admin admin = new Admin();
+        admin.setPassword("hashed");
+        admin.setPending(true);
+
+        when(adminRepository.findById("a1")).thenReturn(admin);
+        when(passwordEncoder.matches("pass", "hashed")).thenReturn(true);
+        when(authClient.adminLogin(any())).thenReturn("TOKEN");
+
+        Object result = adminService.login(dto);
+
+        assertTrue(result instanceof Response);
     }
 
     @Test
     void login_invalidPassword() {
         AdminLoginDTO dto = new AdminLoginDTO();
-        dto.setAdminId("admin1");
+        dto.setAdminId("a1");
         dto.setPassword("wrong");
+
         Admin admin = new Admin();
         admin.setPassword("hashed");
 
-        when(adminRepository.findById("admin1")).thenReturn(admin);
-        when(passwordEncoder.matches(anyString(), anyString())).thenReturn(false);
+        when(adminRepository.findById("a1")).thenReturn(admin);
+        when(passwordEncoder.matches("wrong", "hashed")).thenReturn(false);
 
-        assertThrows(InvalidCredentialsException.class, () -> adminService.login(dto));
+        assertThrows(InvalidCredentialsException.class,
+                () -> adminService.login(dto));
     }
 
-    // ===== subAdminCreate / setSubAdmin / changePassword =====
+    @Test
+    void login_adminNotFound() {
+        AdminLoginDTO dto = new AdminLoginDTO();
+        dto.setAdminId("a1");
+
+        when(adminRepository.findById("a1")).thenReturn(null);
+
+        assertThrows(AdminNotFoundException.class,
+                () -> adminService.login(dto));
+    }
+
+    // ================= subAdminCreate =================
+
     @Test
     void subAdminCreate_success() {
         SubAdminRequest request = new SubAdminRequest();
-        request.setAdminId("admin1");
-        request.setAdminRole(AdminRole.SUPER_ADMIN);
-        request.setPassword("Pass@123");
+        request.setAdminId("sub1");
+        request.setPassword("Password123!");
+        request.setAdminRole(AdminRole.USER_ADMIN);
 
-        when(jwtUtil.extractEmail(TOKEN)).thenReturn("a@a.com");
-        when(jwtUtil.extractUserId(TOKEN)).thenReturn("u1");
+        when(jwtUtil.extractEmail(TOKEN)).thenReturn("mail@test.com");
+        when(jwtUtil.extractUserId(TOKEN)).thenReturn("uid");
 
         String result = adminService.subAdminCreate(TOKEN, request);
+
         assertTrue(result.contains("Sub Admin Created"));
         verify(adminRepository).save(any(Admin.class));
     }
 
+    // ================= setSubAdmin =================
+
     @Test
     void setSubAdmin_success() {
-        SubAdminDetailsDTO request = new SubAdminDetailsDTO();
-        request.setUsername("user1");
-        request.setPassword("Pass@123");
+        SubAdminDetailsDTO dto = new SubAdminDetailsDTO();
+        dto.setUsername("user");
+        dto.setPassword("Password123!");
 
         Admin admin = new Admin();
         admin.setPending(true);
 
-        when(jwtUtil.extractRole(TOKEN)).thenReturn("SUPER_ADMIN");
-        when(adminRepository.findByRole(AdminRole.SUPER_ADMIN)).thenReturn(admin);
+        when(jwtUtil.extractRole(TOKEN)).thenReturn("USER_ADMIN");
+        when(adminRepository.findByRole(AdminRole.USER_ADMIN)).thenReturn(admin);
 
-        String result = adminService.setSubAdmin(request, TOKEN);
-        assertEquals("Username Set.", result);
-        assertFalse(admin.isPending());
+        assertEquals("Username Set.", adminService.setSubAdmin(dto, TOKEN));
+        verify(adminRepository).save(admin);
     }
+
+    @Test
+    void setSubAdmin_alreadyUpdated() {
+        SubAdminDetailsDTO dto = new SubAdminDetailsDTO();
+
+        Admin admin = new Admin();
+        admin.setPending(false);
+
+        when(jwtUtil.extractRole(TOKEN)).thenReturn("USER_ADMIN");
+        when(adminRepository.findByRole(AdminRole.USER_ADMIN)).thenReturn(admin);
+
+        assertEquals("SubAdmin Already Updated.",
+                adminService.setSubAdmin(dto, TOKEN));
+    }
+
+    // ================= changePassword =================
 
     @Test
     void changePassword_success() {
         Admin admin = new Admin();
+
         when(jwtUtil.extractRole(TOKEN)).thenReturn("SUPER_ADMIN");
         when(adminRepository.findByRole(AdminRole.SUPER_ADMIN)).thenReturn(admin);
 
-        String result = adminService.changePassword("Pass@123", TOKEN);
+        String result = adminService.changePassword("Password123!", TOKEN);
+
         assertEquals("Password Changed Successfully.", result);
         verify(adminRepository).save(admin);
     }
@@ -263,6 +279,7 @@ class AdminServiceTest {
         when(jwtUtil.extractRole(TOKEN)).thenReturn("SUPER_ADMIN");
         when(adminRepository.findByRole(AdminRole.SUPER_ADMIN)).thenReturn(null);
 
-        assertThrows(AdminNotFoundException.class, () -> adminService.changePassword("Pass@123", TOKEN));
+        assertThrows(AdminNotFoundException.class,
+                () -> adminService.changePassword("Password123!", TOKEN));
     }
 }
